--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ set(META_NAME_VERSION        "${META_PROJECT_NAME} v${META_VERSION} (${META_VERS
 # Project options
 option(BUILD_SHARED_LIBS     "Build shared instead of static libraries."              ON)
 option(OPTION_SELF_CONTAINED "Create a self-contained install with all dependencies." OFF)
-option(OPTION_BUILD_TESTS    "Build tests."                                           ON)
+option(OPTION_BUILD_TESTS    "Build tests."                                           OFF)
 option(OPTION_BUILD_DOCS     "Build documentation."                                   OFF)
 option(OPTION_BUILD_HANDLERS "Build handlers."                                        ON)
 option(OPTION_BUILD_PLUGINS  "Build plugins."                                         ON)
@@ -87,7 +87,10 @@ file(WRITE "${PROJECT_BINARY_DIR}/VERSION" "${META_NAME_VERSION}")
 # 
 
 include(cmake/CompileOptions.cmake)
+include(cmake/3rdParty.cmake)
 
+include(cmake/Clang-Format.cmake)
+include(cmake/Clang-Tidy.cmake)
 
 # 
 # Deployment/installation setup
@@ -153,7 +156,6 @@ endif()
 # 
 
 add_subdirectory(source)
-add_subdirectory(docs)
 add_subdirectory(deploy)
 
 
