--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ string(SUBSTRING "${GIT_SHA1}" 0 12 GIT_REV)
 set(META_PROJECT_NAME        "hyphawebmanager")
 set(META_PROJECT_DESCRIPTION "Hypha Web Manager")
 set(META_AUTHOR_ORGANIZATION "hypha team")
-set(META_AUTHOR_DOMAIN       "https://hypha.chriamue.de")
+set(META_AUTHOR_DOMAIN       "hyphaproject.github.io")
 set(META_AUTHOR_MAINTAINER   "chriamue@gmail.com")
 set(META_VERSION_MAJOR       "0")
 set(META_VERSION_MINOR       "1")
