--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -37,4 +37,4 @@ set_target_properties(test PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD 1)
 # Tests
 # 
 
-#add_test_without_ctest(hypharunner-test)
+add_test_without_ctest(hyphawebmanager-test)
